<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cokkie" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-20dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/grey"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bglayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/clicker_script"
            android:text="@string/cookiesu"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lowerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registernew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            android:focusable="true" />

        <TextView
            android:id="@+id/helpbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/need_help"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <Button
            android:id="@+id/googlebutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/googleg_standard_color_18"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/outerimage"
                android:layout_width="300dp"
                android:layout_height="242dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="-30dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="@+id/cardView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="@+id/cardView3"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/innerimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-50dp"
                android:accessibilityLiveRegion="polite"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg2" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/maven_pro"
            android:padding="5dp"
            android:text="@string/emailu"
            android:textColor="#474747"
            android:translationZ="17dp"
            app:layout_constraintStart_toStartOf="@+id/cardView4"
            app:layout_constraintTop_toTopOf="@+id/cardView4"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:alpha="1"
            android:background="?attr/actionBarDivider"
            android:backgroundTint="#52FFFFFF"
            android:fontFamily="@font/maven_pro"
            android:hint="@string/emailuu"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textColor="#000000"
            android:textColorHint="#522B2B2B"
            android:textSize="16sp"
            android:translationZ="12dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView4"
            app:layout_constraintStart_toStartOf="@+id/cardView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro"
            android:padding="5dp"
            android:text="@string/password"
            android:textColor="#FF474747"
            android:translationZ="17dp"
            app:layout_constraintBottom_toTopOf="@+id/loginPassword"
            app:layout_constraintStart_toStartOf="@+id/cardView4"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="?attr/actionBarDivider"
            android:backgroundTint="#52FFFFFF"
            android:fontFamily="@font/maven_pro"
            android:hint="@string/passwordu"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:textColor="#000000"
            android:textColorHint="#54333333"
            android:textSize="16sp"
            android:translationZ="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView4"
            app:layout_constraintEnd_toEndOf="@+id/cardView4"
            app:layout_constraintStart_toStartOf="@+id/cardView4"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/maven_pro"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#001AFF"
            android:textSize="20sp"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>