<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="#00919191"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:scrollbarSize="2dp"
    tools:context=".MainRecycler">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="#FFF8F1"
        app:cardCornerRadius="8dp"
        app:cardElevation="7dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="87dp"
                android:layout_height="83dp"
                app:cardBackgroundColor="#00FFFFFF"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/thumbnailMain"
                    android:layout_width="87dp"
                    android:layout_height="83dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:cropToPadding="true" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/headtext"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"
                android:autoText="false"
                android:text="@string/choco"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/descrtext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descrtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:text="@string/the_ultimate"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/headtext" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>